Backporting changes in VisualVM's lib.profiler
Diff generated with:
git diff affe1eb1308554d4df8fcdd6308e9fa4e3f3787a...e88fe0edbb lib.profiler